fixed spacing on error images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,3 +199,11 @@ a:hover {
     margin-top: 30px;
     margin-bottom: 20px;
 }
+
+#img-error-msg{
+    height: 20px;
+}
+
+/* .landing-btn3 {
+    color: 
+} */
